@@ -7,8 +7,7 @@ plugins {
 group 'info.repy'
 version '1.0-SNAPSHOT'
 
-def mainClass = "info.repy.adoptopenjdkupdate.Main"
-mainClassName = mainClass
+mainClassName = "info.repy.adoptopenjdkupdate/info.repy.adoptopenjdkupdate.Main"
 
 repositories {
     mavenCentral()
@@ -18,10 +17,14 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
+run{
+    //jvmArgs = ['--limit-modules','java.base,javafx.controls,javafx.fxml,org.json,jdk.crypto.cryptoki']
+}
+
 jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--compress', '2', '--no-header-files', '--no-man-pages','--add-modules','java.base,jdk.crypto.cryptoki,jdk.crypto.ec,jdk.crypto.mscapi']
     launcher {
-        name = 'helloFX'
+        name = 'adoptopenjdkupdate'
     }
 }
 
